# fedi-xanadu

./: .gitignore  CLAUDE.md  Cargo.nix  Cargo.toml  crate-hashes.json  flake.nix  团队介绍.md
content/missing-semester/: command-line.html  command-line.md  course-shell.html  course-shell.md  data-wrangling.html  data-wrangling.md  debugging-profiling.html  debugging-profiling.md  editors.html  editors.md  metaprogramming.html  metaprogramming.md  potpourri.html  potpourri.md  security.html  security.md  shell-tools.html  shell-tools.md  version-control.html  version-control.md
crates/fx-atproto/: Cargo.toml
crates/fx-client/: Cargo.toml
crates/fx-client/src/: error.rs  lib.rs
crates/fx-client/src/api/: articles.rs  auth.rs  book_series.rs  books.rs  drafts.rs  mod.rs  series.rs  short_reviews.rs  tags.rs
crates/fx-core/: Cargo.toml
crates/fx-core/src/: content.rs  db.rs  error.rs  lib.rs  meta.rs  models.rs  region.rs  util.rs  validation.rs
crates/fx-core/src/models/: article.rs  draft.rs  mod.rs  social.rs  tag.rs
crates/fx-core/src/repo/: article.rs  mod.rs  series.rs
crates/fx-core/src/services/: ad_service.rs  appeal_service.rs  article_service.rs  auth_service.rs  author_service.rs  authorship_service.rs  block_service.rs  book_series_service.rs  book_service.rs  bookmark_service.rs  collaboration_service.rs  comment_service.rs  consistency_service.rs  course_group_service.rs  course_homework_service.rs  course_service.rs  discussion_service.rs  draft_service.rs  event_service.rs  graph_service.rs  indexer_service.rs  learned_service.rs  listing_service.rs  member_service.rs  mod.rs  moderation_service.rs  notification_service.rs  paper_service.rs  patch_service.rs  platform_user_service.rs  publication_service.rs  recommendation_service.rs  report_service.rs  reputation_service.rs  search_service.rs  series_service.rs  short_review_service.rs  skill_service.rs  skill_tree_service.rs  social_service.rs  (+6 more)
crates/fx-pijul/: Cargo.toml
crates/fx-pijul/src/: lib.rs  store.rs
crates/fx-pijul/tests/: store_tests.rs
crates/fx-render/: Cargo.toml
crates/fx-render/src/: convert.rs  lib.rs  markdown_render.rs  tex_render.rs  typst_render.rs
crates/fx-server/: Cargo.toml
crates/fx-server/src/: auth.rs  avatar_cache.rs  config.rs  description.rs  error.rs  main.rs  metrics.rs  openapi.rs  prerender.rs  state.rs  summary.rs  templates.rs
crates/fx-server/src/routes/: mod.rs  pages.rs
crates/fx-server/src/routes/api/: admin.rs  ads.rs  appeals.rs  articles.rs  auth.rs  authors.rs  authorship.rs  blocks.rs  book_series.rs  bookmarks.rs  books.rs  comments.rs  course_groups.rs  course_homeworks.rs  courses.rs  covers.rs  creator.rs  discussions.rs  drafts.rs  events.rs  follows.rs  graph.rs  interests.rs  keybindings.rs  learned.rs  listings.rs  members.rs  mod.rs  notifications.rs  orcid.rs  papers.rs  profile.rs  publication.rs  questions.rs  recommendations.rs  render.rs  reports.rs  series.rs  settings.rs  short_reviews.rs  (+8 more)
crates/fx-validator/: Cargo.toml
crates/fx-validator/src/: lib.rs  path.rs  scan.rs  validate.rs
crates/fx-validator/src/extract/: html.rs  md.rs  mod.rs  series.rs  typst.rs
crates/fx-validator/src/inject/: mod.rs  typst.rs
crates/nightboat-cli/: Cargo.toml
crates/nightboat-cli/src/: main.rs
crates/nightboat-cli/src/commands/: admin.rs  book.rs  book_series.rs  course.rs  course_group.rs  mod.rs  term.rs  tree.rs  util.rs
docs/: README.md  about.md  business-plan-draft.md  roadmap.md
docs/ops/: memo.md
frontend/: index.html  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
lexicons/: at.nightbo.article.json  at.nightbo.book.rating.json  at.nightbo.book.readingstatus.json  at.nightbo.book.shortReview.json  at.nightbo.bookmark.json  at.nightbo.bookseries.rating.json  at.nightbo.bookseries.shortReview.json  at.nightbo.comment.json  at.nightbo.course.rating.json  at.nightbo.learned.json  at.nightbo.publication.entry.json  at.nightbo.publication.follow.json  at.nightbo.publication.json  at.nightbo.publication.membership.json  at.nightbo.series.json  at.nightbo.skill.json  at.nightbo.skilltree.json  at.nightbo.vote.json  at.nightbo.work.json  li.dzming.nightboat.publication.entry.json  li.dzming.nightboat.publication.follow.json  li.dzming.nightboat.publication.json  li.dzming.nightboat.publication.membership.json
migrations/: 013_comments.sql  014_skill_status.sql  015_drafts.sql  016_comment_replies_votes.sql  schema.sql
migrations_pg/: 20260326000001_initial.sql  20260326000002_platform_users.sql  20260326000003_comment_quotes.sql  20260326000004_tag_i18n_names.sql  20260326000005_series_hierarchy.sql  20260327000001_teaches_and_learned.sql  20260327000002_skill_tree_tag.sql  20260327000003_unified_content_tags.sql  20260328000001_notifications.sql  20260328000002_moderation.sql  20260328000003_appeals.sql  20260328100001_typed_enums.sql  20260329000001_qa.sql  20260329000001_trigram_search.sql  20260329000002_series_translations.sql  20260329000003_access_control.sql  20260329000004_user_settings.sql  20260330000001_blocks_and_reports.sql  20260330000002_bookmark_visibility_and_school.sql  20260330000003_education_and_affiliation.sql  20260330000004_category_and_books.sql  20260330000005_book_content_type.sql  20260330000006_book_ratings.sql  20260330000007_series_long_description.sql  20260330000008_edition_cover_and_article_edition.sql  20260330000009_members_chapters_dropped.sql  20260330000010_chapter_teaches.sql  20260330000012_remove_tex_format.sql  20260330000013_article_versions.sql  20260330000014_series_pijul.sql  20260331000001_courses.sql  20260331000001_series_redesign.sql  20260331000002_course_offerings.sql  20260402000001_chapter_content_type.sql  20260409000001_drop_series_parent_id.sql  20260410000001_squash.sql  20260412000001_category_to_varchar.sql  20260413000001_series_collaborators.sql  20260413000002_article_collaborators.sql  20260413000003_discussions.sql  (+105 more)
scripts/: check-i18n.sh  install-hooks.sh  migrate_series_repos.sh
static/: graph.js  new-article.js
(+371 files in other folders)
