[workspace]
members = [
    "crates/fx-server",
    "crates/fx-core",
    "crates/fx-atproto",
    "crates/fx-search",
    "crates/fx-render",
    "crates/fx-cli",
    "crates/fx-client",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = "https://github.com/DzmingLi/fedi-xanadu"

[workspace.dependencies]
fx-core = { path = "crates/fx-core" }
pijul-knot = { git = "https://github.com/DzmingLi/pijul-knot.git" }
fx-atproto = { path = "crates/fx-atproto" }
fx-search = { path = "crates/fx-search" }
fx-render = { path = "crates/fx-render" }
fx-client = { path = "crates/fx-client" }

# Web
axum = { version = "0.8", features = ["macros", "multipart"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "limit", "request-id", "propagate-header"] }
tower_governor = "0.8"

# Type generation
ts-rs = { version = "10", features = ["chrono-impl", "serde-json-impl"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "chrono", "json"] }
chrono = { version = "0.4", features = ["serde"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_derive = "1"
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Crypto / random
argon2 = "0.5"
blake3 = "1"
rand = "0.10"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Misc deps (used by fx-render, fx-cli)
flate2 = "1.1"
tar = "0.4"
ureq = "3"
dirs-next = "2.0"

# Config
toml = { version = "0.8", features = ["preserve_order"] }
figment = { version = "0.10", features = ["toml", "env"] }
