[package]
name = "fx-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fx-core.workspace = true
reqwest = { workspace = true, features = ["json", "multipart"] }
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tokio.workspace = true
chrono.workspace = true
