[package]
name = "fx-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
chrono.workspace = true
argon2.workspace = true
blake3.workspace = true
rand.workspace = true
ts-rs.workspace = true
imara-diff = "0.1"
