[package]
name = "fx-pijul"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
pijul-core.workspace = true
pijul-repository.workspace = true
pijul-config.workspace = true
rand.workspace = true
serde_json.workspace = true

[dev-dependencies]
tempfile = "3"
