[package]
name = "fx-render"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
typst = "0.14.2"
typst-html = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }
pulldown-cmark = { version = "0.13", features = ["html"] }
latex2mathml = "0.2"
ureq.workspace = true
tar.workspace = true
flate2.workspace = true
