[package]
name = "fx-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "nightboat"
path = "src/main.rs"

[dependencies]
fx-core.workspace = true
fx-renderer.workspace = true
fx-atproto.workspace = true
pijul-knot.workspace = true

axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tower_governor.workspace = true
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
figment.workspace = true
reqwest.workspace = true
blake3.workspace = true
rand.workspace = true
chrono.workspace = true
regex-lite = "0.1"
urlencoding = "2"
atproto-auth.workspace = true
atproto-oauth.workspace = true
atproto-identity.workspace = true
async-trait = "0.1"
base64 = "0.22"

[dev-dependencies]
tower = { workspace = true, features = ["util"] }
serde_urlencoded = "0.7"
