[package]
name = "nightboat-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "nbt"
path = "src/main.rs"

[dependencies]
fx-core = { workspace = true }
fx-client = { workspace = true }
reqwest = { workspace = true, features = ["json", "multipart"] }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
dirs-next = { workspace = true }
toml = { workspace = true }
walkdir = "2"
base64 = "0.22"
regex-lite = "0.1"
open = "5"
urlencoding = "2"
